[build-system]
requires = ["setuptools>=75.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydgraph"
authors = [
  { name = "Istari Digital, Inc.", email = "dgraph-admin@istaridigital.com" },
]
license = { file = "LICENSE" }
description = "Official Dgraph client implementation for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  'Intended Audience :: Developers',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Topic :: Database',
  'Topic :: Software Development',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
]
dependencies = ["grpcio>=1.65.0,<2.0.0", "protobuf>=4.23.0,<7.0.0"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "pydgraph.meta.VERSION" }

[project.optional-dependencies]
dev = [
  "build>=1.2.2.post1",
  "grpcio-tools>=1.65.0,<1.66.0; python_version<'3.13'",
  # Python 3.13 requires grpcio-tools >=1.66.2
  "grpcio-tools>=1.66.2; python_version>='3.13'",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.0",
]


[project.urls]
"Homepage" = "https://github.com/dgraph-io/pydgraph"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
